styles/style.css
html{
    scroll-behavior: smooth;
    
}
html,body{
    
    /* width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px; */
    overflow-x: none; 
    overflow-y: none;
}



body{
    background-color: black;
    font-family: 'Syncopate', sans-serif;
}

.navbar{
    left: 0;
    top: 0;
    width: 100%;
    position: fixed;
    z-index:1000;
}

.top_menu_bar{
    background-color: black;
    top:0;
    left: 0;
    position: fixed;
    font-family: 'Syncopate', sans-serif;
    font-weight: bold;
    width: 100%;
    height: 40px;
    color: white;
    font-size: 12px;
    display: inline-flex;
    justify-content: flex-end;
    align-items: center;
    z-index: 1;
    padding-right: 80px;
    
    
}





.instagram_wrapper{
    padding-left: 25px;
}
.top_menu_bar img{
    height: 25px;
    width: 33px;
    padding-right: 8px;
}


.bottom_menu_bar{
    color: white;
    position: fixed;
    top: 40px;
    left: 0;
    width: 100%;
    height: 80px;
    /* background-color: #222222; */
    background-color: rgba(0, 0, 0, 0.6);
    
}
.bottom_menu_bar.white{
    transition: 1s;
    background-color: #878787;
    -webkit-filter: drop-shadow(5px 5px 5px #000);
    filter: drop-shadow(5px 5px 5px #000); 

}

.nav{
    margin-top: -40px;
    margin-right: 80px;
}

.nav li{
    padding-left: 30px;
}

.nav li a {
    
    color: white;
    /* -webkit-filter: drop-shadow(5px 5px 5px #000);
    filter: drop-shadow(5px 5px 5px #000);  */
}

.nav li a.white{
    color: black;
}
.nav li a:hover.white{
    color: #EEAD0E;
}

.nav li a:hover{
    padding-bottom: 5px;
    border-bottom: 2px solid #EEAD0E;
    transition: ease-out 0.3s;
    color: #EEAD0E;
    text-decoration: none;
    /* -webkit-filter: drop-shadow(5px 5px 5px #000);
    filter: drop-shadow(5px 5px 3px #000);  */
}



.contact_button, .faqs_button{
    margin-top: -10px;
    width: 150px;
    height: 40px;
    border: 1px solid;
    color: white;
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 4px;
    border-color: white;
    box-shadow: inset 0 0 0 0 #EEAD0E;
    transition: ease-out 0.3s;
    
    outline: none;

}

.contact_button:hover, .faqs_button:hover{
    box-shadow: inset 150px 0 0 0 #EEAD0E;
    color:black;
}

#background_video{
    position:absolute;
    left: -12vh;
    /* top:40px; */
    max-height: 100vh;
    min-width: 100%;


    z-index:-1000;
    opacity: 25%;

}



.header{
    text-align: center;
    height: 100vh;
}
#header_logo{
    width: 35%;
    padding-top: 33vh;
    -webkit-filter: drop-shadow(5px 5px 5px #000);
 filter: drop-shadow(5px 5px 5px #000); 
}

#menu_logo{
    height: 60px;
    width: 60px;
    /* float:left; */
    margin-top: 10px;
    margin-left: 80px;
}




.scroll_down{
    font-size: 12px;
    text-align: center;
    margin-top: 30vh;
    
}
.scroll_down a{
    color: white;
    text-decoration: none;
    font-weight: bold;
    text-shadow: 2px 2px 5px #000000;
}

.scroll_down a:hover{
    color: #EEAD0E;
}

.arrow-down{
    margin-top: -1.5vh;
    position: relative;
    width: 100%;
    /* margin: 0 auto; */
    text-align: center;
    /* border-color: #c5c6c7; */
}

.arrow-down::after{
    content: "";
    width: 20px;
    height: 20px;
    position: absolute;
    margin: auto;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    border-right: 2px solid;
    border-bottom: 2px solid;
    /* -webkit-transform: rotate(45deg); */
    transform: rotate(45deg);
    /* -webkit-animation: 3s arrow infinite ease; */
    animation: 2s arrow infinite ease;
    
}

@-webkit-keyframes arrow{
    0%, 100% {
        top: 55px;
    }
    50%{
        top: 80px;
    }
}

@keyframes arrow{
    0%, 100% {
        top: 55px;
    }
    50%{
        top: 80px;
    }
}


.about{
    padding-top: 6%;
    height: 85vh;
    background-color: black;
    text-align: center;
}

.about_content_wrapper{
    background-color:rgb(34, 34, 34, 0.4);
    border-width: thin;
    border: 1px solid;
    border-color: #EEAD0E;
    /* border-color: white; */
    /* margin-left: 30%;
    margin-right: 30%; */
    /* margin-top: 6%;  */
    border-left: 0;
    border-right: 0;
}

#about_title{
    color: white;
    font-weight: bold;
    padding-top: 5%;
    font-size: 40px;

    /* shadow */
    -webkit-filter: drop-shadow(5px 5px 2px #000);
    filter: drop-shadow(5px 5px 2px #000); 

}

hr{
    background-color: #EEAD0E;
    width: 25%;
    margin-top: 1%;
    margin-bottom: 2%;
}

#about_description{
    color: white;
    margin-left: 30%;
    margin-right: 30%;
    padding-bottom: 5%;
    /* text-align: justify; */
    text-transform: uppercase;

    /* shadow */
    -webkit-filter: drop-shadow(5px 5px 5px #000);
    filter: drop-shadow(5px 5px 5px #000); 
}


.faqs{
    padding-top: 6%;
    height: auto;
    width: 100%;
    /* background-color: black; */
    text-align: center;
    margin-bottom: 6%;
    
}

.faqs_content_wrapper{
    /* margin-top: 6%; */
    background-color:rgb(34, 34, 34, 0.4);
    border: 0.5px solid;
    border-color: #EEAD0E;
    /* margin-left: 30%;
    margin-right: 30%; */
    text-align: center;
    border-left: 0;
    border-right: 0;
}

#faqs_title{
    font-size: 40px;
    color: white;
    font-weight: bold;
    padding-top: 5%;
    

    /* shadow */
    -webkit-filter: drop-shadow(5px 5px 2px #000);
    filter: drop-shadow(5px 5px 2px #000); 

}


/* #faqs_description{
    color: white;
    margin-left: 10%;
    margin-right: 10%;
    padding-bottom: 5%;
    text-align: justify;

    -webkit-filter: drop-shadow(5px 5px 5px #000);
    filter: drop-shadow(5px 5px 5px #000); 
} */

.faqs_description{
    text-transform: uppercase;
    text-align: center;
    margin-left: 30%;
    margin-right: 30%;
}

.faqs_bg{
    margin-top:-6%;
    position: absolute;
    left: 0;
    max-height: 120%;
    min-width: 100%;
    opacity: 20%;
}
.carousel_wrapper{
    height: 75vh;
    width: 100%;
    background-color: black;
    padding-top: 8%;
}

.carousel-item img{
    opacity: 10%;
}

.carousel{
    margin-left: 30%;
    margin-right: 30%;
    border: #222 solid 2px;

}



/* .carousel img{
    height: 80vh;
    max-width: 120vw;
    padding-top: 6%;
    padding-left: 15%;
    padding-right: 15%;

} */



.carousel-caption{
    
    margin-bottom: 5%;
    text-transform: uppercase;
    font-size: 25px;
}

.carousel-caption p{
    filter: drop-shadow(5px 5px 2px #000); 
    z-index: 4;
}
.carousel-caption p:nth-child(4){
    float:right;
}

.carousel-caption img{
    height: 150px;
    width: 150px;
    position:absolute;
    opacity: 20%;
    z-index: -1;
}

#opening{
    left: 0;
    top: -3vh;
}
#closing{
    right: 0;
    bottom: 0;
} 


.footer{
    height: 30vh;
    color: white;
    text-transform: uppercase;
    border-top: 1px solid #222;
    /* background-color: #222; */
    
}

#footer_bg{
    width: 99vw;
    opacity: 20%;
    position: absolute;
    
}

#footer_logo{
    width: 80%;
}

.container{
    text-align: center;
}

.firstcol{
    margin-top: 6%;
    padding-top: 3%;
    font-size: 15px;
    filter: drop-shadow(5px 5px 2px #000); 
    border-right: 1px solid gray;
    height: 21vh;
}
.firstcol img{
    margin-bottom: 3%;
    
}

.secondcol{
    filter: drop-shadow(5px 5px 2px #000); 
    border-right: 1px solid gray;
    height: 21vh;
    margin-top: 6%;
    padding-top: 3%;
    
}

.secondcol p{
    font-size: 20px;
    /* color: #EEAD0E; */
    font-weight: bold;
}

.secondcol button{
    margin-top: 1%;
    margin-bottom: 1%;
}

.thirdcol {
    font-size: 20px;
    filter: drop-shadow(5px 5px 2px #000); 
    text-align: center;
    margin-top: 9%;
}

.thirdcol img{
    height: 60px;
    width: 60px;
}






/* for iphone X, s9 */
@media (max-width: 414px){ 
    .top_menu_bar {
        display: none;
    }


    

    nav{
        display:none;
    }

    .bottom_menu_bar{
        top: 0;
        max-width: 100vw;
        background-color: transparent;
    }

    #background_video{
        background-attachment: fixed;
        background-repeat: no-repeat;
        position: absolute;
        z-index: -4;
        
    
    
        /* Set rules to fill background */
        min-width: 100%;
        height: 100vh;
        
    
        /* Set up positioning */
        top: 0;
        left: 0;
        background-position: 0 -500px; 
    }

    .faqs_bg{
        background-attachment: fixed;
        background-repeat: no-repeat;
        position: absolute;
        z-index: -3;
        /* opacity: 0; */
    
    
        /* Set rules to fill background */
        min-width: 100%;
        height: 100vh;
        
    
        /* Set up positioning */
        top: 200vh;
        left: 0;
        margin-left: -100vh;
    }

    #menu_logo{
        margin-left: 10px;
        height: 80px;
        width: 80px;
        display:none;
    }
    
    #header_logo{
        width: 90%;
        padding-top: 40vh;
    }




    

}

